spring eureka discovery server

--- a/discovery-service/src/main/resources/application.properties
+++ b/discovery-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+spring.application.name=DISCOVERY-SERVICE
+
 server.port=8761
+
 #dont register server itself as a client
 eureka.client.fetch-registry=false
 
