--- a/customer-management/src/test/resources/application.properties
+++ b/customer-management/src/test/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PWD:brody2250}
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/bank_db_customer?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/bank_db_customer_test?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 eureka.instance.preferIpAddress=true
 spring.cloud.discovery.enabled=true
