--- a/customer-management/src/main/resources/application.properties
+++ b/customer-management/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8801
-server.servlet.context-path=/customer-service
+server.servlet.context-path=/e-bank
 spring.mvc.servlet.path=/api
 spring.application.name=CUSTOMER-SERVICE
 spring.jpa.hibernate.ddl-auto=update
