--- a/bank-account-management/src/main/resources/application.properties
+++ b/bank-account-management/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8802
+server.servlet.context-path=/e-bank
+spring.mvc.servlet.path=/api
+spring.application.name=ACCOUNT-SERVICE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PWD:brody2250}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/bank_db_account?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+eureka.instance.preferIpAddress=true
+spring.cloud.discovery.enabled=true
 
